# embedded-systems-team-P4J

./: README.md  pico_w_webserver.uf2
Buddy2/: CMakeLists.txt  b2_functions.c  b2_functions.h  project_buddy2.c
Integrated_files/: CMakeLists.txt  FreeRTOSConfig.h  README.txt  buddy_1.c  buddy_1.h  buddy_1_bak.txt  cgi.h  debug.c  debug.h  htmldata.c  hw_config.c  lwipopts_examples_common.h  main.c  ntp.c  ntp.h  ssi.h
Integrated_files/html_files/: index.shtml
buddy4/: CMakeLists.txt  blinky.c  buddy4.c
dataCapnLog/: CMakeLists.txt  capturenlog.h  capturenlog11.c  capturenlog3.c  hw_config.c
dataCapnLog/FatFs_SPI/sd_driver/: sd_card.h  spi.h
